清理itemid